
# include Chai3d 
# -- this is required by Chai3d to pick the correct path for OpenGL headers
FIND_PACKAGE(CHAI3D REQUIRED)
ADD_DEFINITIONS(${CHAI3D_DEFINITIONS})
if (CMAKE_SYSTEM_NAME MATCHES Darwin) 
  ADD_DEFINITIONS(-D_MACOSX -DMACOSX)
elseif (CMAKE_SYSTEM_NAME MATCHES Linux)
  ADD_DEFINITIONS(-D_LINUX -DLINUX)
endif () #NOTE: Windows is currently unsupported
LINK_DIRECTORIES(${CHAI3D_LIBRARY_DIRS})

# #include Sai2-Urdf
FIND_PACKAGE(SAI2-URDF REQUIRED)

# include Sai2-Simulation
FIND_PACKAGE(SAI2-SIMULATION REQUIRED)

# include Sai2-Model
FIND_PACKAGE(SAI2-MODEL REQUIRED)

# include Sai2-Graphics
FIND_PACKAGE(SAI2-GRAPHICS REQUIRED)

INCLUDE_DIRECTORIES (
	${CHAI3D_INCLUDE_DIRS}
	${SAI2-SIMULATION_INCLUDE_DIRS}
	${SAI2-MODEL_INCLUDE_DIRS}
	${SAI2-GRAPHICS_INCLUDE_DIRS}
)

SET (SAI2-COMMON_EXAMPLES_LIBRARIES
	${SAI2-COMMON_LIBRARIES}
	${CHAI3D_LIBRARIES}
	${SAI2-SIMULATION_LIBRARIES}
	${SAI2-MODEL_LIBRARIES}
	${SAI2-GRAPHICS_LIBRARIES}
)

ADD_SUBDIRECTORY(01-timer)
ADD_SUBDIRECTORY(02-filters)
ADD_SUBDIRECTORY(03-logger)
ADD_SUBDIRECTORY(04-redis_communication)
